change бэм class

--- a/src/html/imageSlider3.html
+++ b/src/html/imageSlider3.html
@@ -1,22 +1,8 @@
-<div class="image-slider3 swiper-container">
+<div class="image-slider3">
    <div class="image-slider3__wrapper swiper-wrapper">
-      <div class="image-slider3__swiper-slide swiper-slide">
-         <!-- <div class="image-slider3__info-block info-block">
-            <p class="info-block__hit"><span>Популярный товар</span></p>
-            <p class="info-block__new"><span>Новинка</span></p>
-         </div>
-         <div class="image-slider3__action-block">
-            <button class="heart-btn">
-               <span>В избранное</span>
-            </button>
-            <button class="compare-btn">
-               <span>Сравнить</span>
-            </button>
-         </div> -->
-         <img src="./images/cart/3.jpg" alt="">
-      </div>
-      <div class="swiper-slide"><img src="./images/cart/3.jpg" alt=""></div>
-      <div class="swiper-slide"><img src="./images/cart/3.jpg" alt=""></div>
+      <div class="swiper-slide"><img src="./images/cart/3.jpg" alt="Умные часы SMARTWATCH черный"></div>
+      <div class="swiper-slide"><img src="./images/cart/3.jpg" alt="Умные часы SMARTWATCH черный"></div>
+      <div class="swiper-slide"><img src="./images/cart/3.jpg" alt="Умные часы SMARTWATCH черный"></div>
    </div>
    <div class="image-slider3__swiper-pagination swiper-pagination"></div>
 </div>
