--- a/src/html/imageSlider4.html
+++ b/src/html/imageSlider4.html
@@ -1,10 +1,8 @@
-<div class="image-slider4 swiper-container">
-   <div class="image-slider4__wrapper swiper-wrapper">
-      <div class="image-slider4__swiper-slide swiper-slide">
-         <img src="./images/cart/4.jpg" alt="">
-      </div>
-      <div class="swiper-slide"><img src="./images/cart/4.jpg" alt=""></div>
-      <div class="swiper-slide"><img src="./images/cart/4.jpg" alt=""></div>
+<div class="image-slider4">
+   <div class="image-slider4__swiper-wrapper swiper-wrapper">
+      <div class="swiper-slide"><img src="./images/cart/4.jpg" alt="Золотое кольцо МАЛИКА"></div>
+      <div class="swiper-slide"><img src="./images/cart/4.jpg" alt="Золотое кольцо МАЛИКА"></div>
+      <div class="swiper-slide"><img src="./images/cart/4.jpg" alt="Золотое кольцо МАЛИКА"></div>
    </div>
    <div class="image-slider4__swiper-pagination swiper-pagination"></div>
 </div>
