--- a/src/html/primarySlider.html
+++ b/src/html/primarySlider.html
@@ -1,8 +1,8 @@
 <div class="container-swiper">
-   <div class="swiper">
-      <div class="swiper-wrapper">
-         <div class="swiper-slide swiper-slide__slide slide">
-            <div class="slide__top-info-block top-info-block">
+   <div class="primary-swiper swiper">
+      <div class="primary-swiper__swiper-wrapper swiper-wrapper">
+         <div class=" primary-swiper__slide slide swiper-slide">
+            <div class="top-info-block">
                <div class="top-info-block__info-block info-block">
                </div>
                <div class="top-info-block__action-block">
@@ -32,7 +32,7 @@
             </div>
          </div>
          <div class="swiper-slide swiper-slide__slide">
-            <div class="slide__top-info-block top-info-block">
+            <div class="top-info-block">
                <div class="top-info-block__info-block info-block">
                </div>
                <div class="top-info-block__action-block">
@@ -61,7 +61,7 @@
             </div>
          </div>
          <div class="swiper-slide swiper-slide__slide">
-            <div class="slide__top-info-block top-info-block">
+            <div class="top-info-block">
                <div class="top-info-block__info-block info-block">
                   <p class="info-block__hit"><span>Популярный товар</span></p>
                </div>
@@ -92,7 +92,7 @@
             </div>
          </div>
          <div class="swiper-slide swiper-slide__slide">
-            <div class="slide__top-info-block top-info-block">
+            <div class="top-info-block">
                <div class="top-info-block__info-block info-block">
                   <p class="info-block__new"><span>Новый товар</span></p>
                </div>
@@ -122,7 +122,7 @@
             </div>
          </div>
          <div class="swiper-slide swiper-slide__slide">
-            <div class="slide__top-info-block top-info-block">
+            <div class="top-info-block">
                <div class="top-info-block__info-block info-block">
                   <p class="info-block__hit"><span>Популярный товар</span></p>
                   <p class="info-block__new"><span>Новый товар</span></p>
