--- a/src/html/imageSlider2.html
+++ b/src/html/imageSlider2.html
@@ -1,21 +1,8 @@
-<div class="image-slider2 swiper-container">
-   <div class="image-slider2__wrapper swiper-wrapper">
-      <div class="image-slider2__swiper-slide swiper-slide">
-         <!-- <div class="image-slider2__info-block info-block">
-            <p class="info-block__hit"><span>Популярный товар</span></p>
-         </div>
-         <div class="image-slider2__action-block">
-            <button class="heart-btn">
-               <span>В избранное</span>
-            </button>
-            <button class="compare-btn">
-               <span>Сравнить</span>
-            </button>
-         </div> -->
-         <img src="./images/cart/2.jpg" alt="">
-      </div>
-      <div class="swiper-slide"><img src="./images/cart/2.jpg" alt=""></div>
-      <div class="swiper-slide"><img src="./images/cart/2.jpg" alt=""></div>
+<div class="image-slider2">
+   <div class="image-slider2__swiper-wrapper swiper-wrapper">
+      <div class="swiper-slide"><img src="./images/cart/2.jpg" alt="Кашпо для цветов керамическое СИМПЛГРЕЙ"></div>
+      <div class="swiper-slide"><img src="./images/cart/2.jpg" alt="Кашпо для цветов керамическое СИМПЛГРЕЙ"></div>
+      <div class="swiper-slide"><img src="./images/cart/2.jpg" alt="Кашпо для цветов керамическое СИМПЛГРЕЙ"></div>
    </div>
    <div class="image-slider2__swiper-pagination swiper-pagination"></div>
 </div>
