--- a/src/html/primarySlider.html
+++ b/src/html/primarySlider.html
@@ -154,8 +154,6 @@
          </div>
       </div>
    </div>
-   <div class="container-swiper__btn-block">
-      <div class="btn-block__button-prev"></div>
-      <div class="btn-block__button-next"></div>
-   </div>
+   <div class="primary-swiper__button-prev button-prev"></div>
+   <div class="primary-swiper__button-next button-next"></div>
 </div>
